alter header img
added Mary Rose Cook's js game to the header
added content to the About section

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-progressbar-3.3.0.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">	
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -28,21 +29,27 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+	
+	
 </head>
 
 <body id="page-top" class="index">
 
-    <!-- Header -->
+    <!-- Header -->	
     <header>
+	<p>Forgive me if something isn't upright yet, I'm still developing this</p>
         <div class="container">
+			<!-- JavaScript game created by Mary Rose Cook at Front-Trends 2014
+				The purpose for this usage is purely for amusement. 
+				I wasn't the author of this code, I just happen to be fascinated by it!-->
+			<canvas id="screen" width="310" height="310" title="Invaders by Mary Rose Cook"></canvas>
+			<script type="text/javascript" src="game.js"></script>
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
                         <span class="name">Francisco Amado</span>
                         <hr class="star-light">
-                        <span class="skills">Student - Freelancer - Developer</span>
+                        <span class="skills">cout << "Student " << "Developer"</span>
                     </div>
                 </div>
             </div>
@@ -50,7 +57,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-<section id="portfolio">
+	<section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -94,14 +101,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
+                    <p>My name is Francisco Amado and welcome. I'm a BS student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball, Bodyboarding and browse Reddit.</p>
+				</div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
+                    <p>I've discovered programming late in my teens through Arduino, which i unfortunately don't have the time to "play" with anymore, and since then I've been trying to soak in all the information I can get and all the amazing things I've seen. I like software development and mobile, although I've been finding web development really interesting</p></div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> Download Curriculum Vitae
                     </a>
                 </div>
             </div>
@@ -238,7 +244,10 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/book.png" class="img-responsive img-centered" alt="">
                             <p>As I level up in life, my skillbook gets better and more vast. These are some of the skills I got through quests:</p>
-							<div class="container">
+							<div class="progress right">
+								<div class="progress-bar" data-transitiongoal="75" ></div>
+							</div>
+							<!--<div class="container">
 								<div class="row">
 									<div class="col-lg-2">
 										<h6>Java</h6>
@@ -253,28 +262,37 @@
 										</div>
 									</div>
 								</div>
-								<div class="row control">
-									<div class="col-lg-2">
+								<div class="row">
+									<!--<div class="col-lg-2">
 										<h6>.NET</h6>
 									</div>
 									<div class="col-lg-2">
-										<div class="progress">
-										   <div class="progress-bar progress-bar-info" role="progressbar" 
-											  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" 
-											  style="width: 70%;">
-											  <span class="sr-only">70% Complete</span>
-										   </div>
+										<div class="progress vertical">
+											<span>JAVA</span>
+											<div class="progress-bar six-sec-ease-in-out" role="progressbar" data-transitiongoal="20"></div>
+										</div>
+										<div class="progress vertical">
+											<div class="progress-bar progress-bar-success six-sec-ease-in-out" role="progressbar" data-transitiongoal="40">.NET</div>
+										</div>
+										<div class="progress vertical">
+											<div class="progress-bar progress-bar-info six-sec-ease-in-out" role="progressbar" data-transitiongoal="60"></div>
+										</div>
+										<div class="progress vertical">
+											<div class="progress-bar progress-bar-warning six-sec-ease-in-out" role="progressbar" data-transitiongoal="80"></div>
+										</div>
+										<div class="progress vertical">
+											<div class="progress-bar progress-bar-danger six-sec-ease-in-out" role="progressbar" data-transitiongoal="100"></div>
 										</div>
 									</div>
 								</div>
-							</div>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
+							</div>-->
+						</div>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
                 </div>
             </div>
         </div>
-	</div>
+    </div>
 	<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
@@ -309,6 +327,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -321,7 +340,15 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
-
+	<script type="text/javascript" src="js/bootstrap-progressbar.js"></script>
+	
+	<script type='text/javascript'>
+		$(document).ready(function() {
+			$('.progress .progress-bar').progressbar(); 
+		});
+	</script>
+	
+	
 </body>
 
 </html>
