minor timer24 div change

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							<img src="img/portfolio/box.png" class="img-responsive img-centered" alt="">
 							<p>I can't say One have done much, but what I can say is that One is hungry for more</p>
 							<p>In the meantime, here shall be some of my little projects:</p>
-							<div class="container">
+							<div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3>Timer24</h3>
