changed CV download visibility for different devices

--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
                     <p>My name is Francisco Amado and welcome. I'm a Grad Student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball, Bodyboarding and browse Reddit.</p>
 				</div>
                 <div class="col-lg-4">
-                    <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p></div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Curriculum Vitae</br>(in Portuguese)
-					</a>
+                    <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
+				</div>
+				<div class="col-lg-8 col-lg-offset-2 text-center visible-md visible-lg">
+						<a href="#" class="btn btn-lg btn-outline">
+							<i class="fa fa-download"></i> Download Curriculum Vitae</br>(in Portuguese)
+						</a>
                 </div>
+				 
             </div>
         </div>
     </section>
