--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 									<img src="img/portfolio/BPwebsite.bmp" width="580" height="320" class="img-responsive img-centered" alt="">
 									<br>
 									<h5><i>Business Precision</i> Homer Game</h5>
-									<h6>This 3D maze game was develop using OPENGL and a WebService for the online side of it. You are Homer, the dummy, and you can play in first or third person, shoot fire balls, be chased by an alien and run mad in the maze.</h6>
+									<h6>This 3D maze game was develop using OPENGL and a WebService for the online support. You are Homer, the dummy, and you can play in first or third person, shoot fire balls, be chased by an alien and run mad in the maze.</h6>
 									<img src="img/portfolio/HomerGame.bmp" width="580" height="580" class="img-responsive img-centered" alt="">
 								</div>
 								<div class="row">
