--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center visible-md visible-lg">
-						<a href="#" class="btn btn-lg btn-outline">
+						<a href="img/portfolio/FranciscoAmadoCV.pdf" download class="btn btn-lg btn-outline" >
 							<i class="fa fa-download"></i> Download Curriculum Vitae</br>(in Portuguese)
 						</a>
                 </div>
