--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="col-lg-4">
                     <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
 				</div>
-				<div class="col-lg-8 col-lg-offset-2 text-center visible-md visible-lg">
+				<div class="col-lg-8 col-lg-offset-2 text-center">
 						<a href="img/portfolio/FranciscoAmadoCV.pdf" download class="btn btn-lg btn-outline" >
 							<i class="fa fa-download"></i> Download Curriculum Vitae</br>(in Portuguese)
 						</a>
