--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="css/timesheet.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,6 +35,7 @@
     <![endif]-->
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/timesheet.js"></script>
 	
 	<!-- Circle Bars :: NOT USING
 	<script src="js/jquery.circlechart.js"></script>
@@ -126,6 +128,20 @@
         </div>
     </section>
 
+    <!-- Career Section -->
+    <section class="success" id="career">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Wanning Gibbous</h2>
+                    <hr class="star-light">
+                    <p>Here is what, when and where I've worked</p>
+                <div id="timesheet"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
    
     <!-- Footer -->
     <footer class="text-center">
@@ -134,7 +150,7 @@
                 <div class="row">
                     <div class="footer-col col-md-12">
                         <h3>Location</h3>
-                        <p>Leça da Palmeira<br>Matosinhos, PORTO</p>
+                        <p>Leça da Palmeira<br>Porto, PORTUGAL</p>
                     </div>
                     <div class="footer-col col-md-12">
                         <h3>Get social</h3>
@@ -277,6 +293,12 @@
 			</div>
 		</div>
 	</div>
+
+    <!-- Timesheet data array -->
+    <script type="text/javascript">
+            new Timesheet('timesheet', 2014, 2015, [
+          ['06/2014', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem']]);
+    </script>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
