--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                     <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-						<a href="img/portfolio/FranciscoAmadoCV.pdf" download class="btn btn-lg btn-outline" >
-							<i class="fa fa-download"></i> Download Curriculum Vitae</br>(in Portuguese)
+						<a href="img/portfolio/FranciscoAmadoCV_light.pdf" download class="btn btn-lg btn-outline" >
+							<i class="fa fa-download"></i> Download Curriculum Vitae</br>
 						</a>
                 </div>
 				 
@@ -296,8 +296,10 @@
 
     <!-- Timesheet data array -->
     <script type="text/javascript">
-            new Timesheet('timesheet', 2014, 2015, [
-          ['06/2014', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem']]);
+            new Timesheet('timesheet', 2014, 2016, [
+            	['01/2014', '06/2015', 'Freelancer, Own projects, mostly related to College', 'dolor'],
+          ['06/2015', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem'],
+           ['09/2015', '03/2016', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>', 'ipsum']]);
     </script>
 
     <!-- jQuery -->
