--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Francisco Amado and welcome. I'm a Grad Student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball, Bodyboarding and browse Reddit.</p>
+                    <p>My name is Francisco Amado and welcome. I'm an iOS Developer at <a href="http://africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> and a Grad Student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball, Bodyboarding and browse Reddit.</p>
 				</div>
                 <div class="col-lg-4">
                     <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
@@ -130,14 +130,16 @@
 
     <!-- Career Section -->
     <section class="success" id="career">
-        <div class="container">
+        <div class="container hidden-xs">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Wanning Gibbous</h2>
                     <hr class="star-light">
                     <p>Here is what, when and where I've worked</p>
-                <div id="timesheet"></div>
                 </div>
+            </div>
+            <div class="row">
+            	<div class="col-lg-12"id="timesheet"></div>
             </div>
         </div>
     </section>
@@ -177,11 +179,7 @@
                                 <a href="http://stackoverflow.com/users/4312210/francisco-amado" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
                             </li>
                         </ul>
-                    </div><!--
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </div>
@@ -198,7 +196,7 @@
     </footer>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top page-scroll visible-xs visble-sm">
+    <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
@@ -258,6 +256,12 @@
 							<p>I can't say One have done much, but what I can say is that One is hungry for more</p>
 							<p>In the meantime, here shall be some of my little projects:</p>
 							<div>
+								<div class="row">
+									<hr class="nostar-primary">
+									<h3>Biztrend</h3>
+									<h4>iOS Data Visualization app for Porto Tech Center Mobile Summer Academy</h4>
+										<img src="img/portfolio/iOS-Detail-frame.png" width="480" height="320" class="img-responsive img-centered" alt="">
+								</div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3>Timer24</h3>
