--- a/index.html
+++ b/index.html
@@ -119,11 +119,10 @@
                     <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-						<a href="img/portfolio/FranciscoAmadoCV_light.pdf" download class="btn btn-lg btn-outline" >
+						<a href="img/portfolio/CV_Francisco_Amado.pdf" download class="btn btn-lg btn-outline" >
 							<i class="fa fa-download"></i> Download Curriculum Vitae</br>
 						</a>
                 </div>
-
             </div>
         </div>
     </section>
@@ -138,12 +137,19 @@
                     <p>Here is what, when and where I've worked</p>
                 </div>
             </div>
-            <div class="row">
-            	<div class="col-lg-12"id="timesheet"></div>
+            <div class="row" id="timesheet">
+                <div class="col-lg-12 text-center">
+                    <!-- <section class="time" id="timesheet"></section> -->
+                    <script type="text/javascript">
+                            new Timesheet('timesheet', 2014, 2016, [
+                                ['01/2014', '06/2015', 'Freelancer, Own projects, mostly related to College', 'dolor'],
+                                ['06/2015', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem'],
+                                ['09/2015', '03/2016', 'iOS Developer for <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank">Jovago</a> @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>', 'ipsum']]);
+                    </script>
+                </div>
             </div>
         </div>
     </section>
-
 
     <!-- Footer -->
     <footer class="text-center">
@@ -253,21 +259,28 @@
 							<h2>Projects</h2>
 							<hr class="star-primary">
 							<img src="img/portfolio/box.png" class="img-responsive img-centered" alt="">
-							<p>I can't say One have done much, but what I can say is that One is hungry for more</p>
-							<p>In the meantime, here shall be some of my little projects:</p>
+							<p>My work here exhibited (more on my <a href="https://github.com/FranciscoAmado">Github page</a>):</p>
 							<div>
+                                <div class="row">
+                                    <hr class="nostar-primary">
+                                    <h3>Jovago</h3>
+                                    <h4>iOS Jovago Booking app at Porto Tech Center</h4>
+                                    <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8">
+                                        <img src="img/portfolio/Jovago-ss.png" width="245" height="480" class="img-responsive img-centered" alt="">
+                                    </a>
+                                </div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3>Biztrend</h3>
 									<h4>iOS Data Visualization app for Porto Tech Center Mobile Summer Academy</h4>
-										<img src="img/portfolio/iOS-Detail-frame.png" width="480" height="320" class="img-responsive img-centered" alt="">
+										<img src="img/portfolio/iOS-Detail-frame.png" width="245" height="480" class="img-responsive img-centered" alt="">
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3>Timer24</h3>
 									<h4>Android Basketball Timer app</h4>
 									<a href="https://github.com/FranciscoAmado/Timer24">
-										<img src="img/portfolio/timer24-ss.png" width="480" height="320" class="img-responsive img-centered" alt="">
+										<img src="img/portfolio/timer24-ss.png" width="245" height="480" class="img-responsive img-centered" alt="">
 									</a>
 								</div>
 								<div class="row">
@@ -299,12 +312,6 @@
 	</div>
 
     <!-- Timesheet data array -->
-    <script type="text/javascript">
-            new Timesheet('timesheet', 2014, 2016, [
-            	['01/2014', '06/2015', 'Freelancer, Own projects, mostly related to College', 'dolor'],
-          ['06/2015', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem'],
-           ['09/2015', '03/2016', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>', 'ipsum']]);
-    </script>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
