+ AppStore Badge for Jovago app + Projects keywords % self presentation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="intro-text">
                         <span class="name">Francisco Amado</span>
                         <hr class="star-light">
-                        <span class="skills">cout << "Student " << "Developer"</span>
+                        <span class="skills">NSLog(@"Student and Developer");</span>
                     </div>
                 </div>
             </div>
@@ -113,10 +113,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Francisco Amado and welcome. I'm an iOS Developer at <a href="http://africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> and a Grad Student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball, Bodyboarding and browse Reddit.</p>
+                    <p>My name is Francisco Amado and welcome. I'm an iOS Developer (previously at <a href="http://africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>)
+                         and a Grad Student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at
+                         <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things
+                         such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball,
+                         Bodyboarding and browse Reddit.</p>
 				</div>
                 <div class="col-lg-4">
-                    <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday. I like software development and mobile.</p>
+                    <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday.
+                        I like software development and mobile.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 						<a href="img/portfolio/CV_Francisco_Amado.pdf" download class="btn btn-lg btn-outline" >
@@ -259,7 +264,7 @@
 							<h2>Projects</h2>
 							<hr class="star-primary">
 							<img src="img/portfolio/box.png" class="img-responsive img-centered" alt="">
-							<p>My work here exhibited (more on my <a href="https://github.com/FranciscoAmado">Github page</a>):</p>
+							<p>My work here exhibited, most recent first(more on my <a href="https://github.com/FranciscoAmado">Github page</a>):</p>
 							<div>
                                 <div class="row">
                                     <hr class="nostar-primary">
@@ -267,13 +272,17 @@
                                     <h4>iOS Jovago Booking app at Porto Tech Center</h4>
                                     <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8">
                                         <img src="img/portfolio/Jovago-ss.png" width="245" height="480" class="img-responsive img-centered" alt="">
+                                        <img src="img/portfolio/appstorebadge.svg" class="img-responsive img-centered" alt="">
+
                                     </a>
+                                    <p><h4>Keywords:</h4> Bookings, Objective-C, RestKit, CoreData, Localisation, GoogleMaps, Google Analytics, Jenkins</p>
                                 </div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3>Biztrend</h3>
 									<h4>iOS Data Visualization app for Porto Tech Center Mobile Summer Academy</h4>
-										<img src="img/portfolio/iOS-Detail-frame.png" width="245" height="480" class="img-responsive img-centered" alt="">
+                                    <img src="img/portfolio/iOS-Detail-frame.png" width="245" height="480" class="img-responsive img-centered" alt="">
+                                    <p><h4>Keywords:</h4> Charts, KPI's, Objective-C, API Communication, CoreData, Localisation, GoogleSignin, Local Notifications, Background Fetch</p>
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
@@ -282,20 +291,20 @@
 									<a href="https://github.com/FranciscoAmado/Timer24">
 										<img src="img/portfolio/timer24-ss.png" width="245" height="480" class="img-responsive img-centered" alt="">
 									</a>
+                                    <p><h4>Keywords:</h4> Timer, Time Restrictions, Custom Keyboard</p>
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3><i>Business Precision</i> Project</h3>
 									<h4>The project consisted on forming a company, develop an online 3D game in C++ using the OpenGL library, the webserver that would support calls and the company's webpage</h4>
 									<br>
-									<h5><i>Business Precision</i> Webpage</h5>
-									<h6>The internationalized webpage would support a login system, access to a download page, public and private maps, entrying new maps, see the leaderboad for each map and the path of your most successful map. All this features working together with a custom made WebService</h6>
-									<br>
+									<h4> Website</h4>
 									<img src="img/portfolio/BPwebsite.bmp" width="580" height="320" class="img-responsive img-centered" alt="">
+                                    <p><h5>Keywords:</h5> .NET, Localisation, Login System, Downloads, Storing game data, Custom WebService</p>
 									<br>
-									<h5><i>Business Precision</i> Homer Game</h5>
-									<h6>This 3D maze game was develop using OPENGL and a WebService for the online support. You are Homer, the dummy, and you can play in first or third person, shoot fire balls, be chased by an alien and run mad in the maze.</h6>
+									<h4>Homer Game</h4>
 									<img src="img/portfolio/HomerGame.bmp" width="580" height="580" class="img-responsive img-centered" alt="">
+                                    <p><h5>Keywords:</h5> 3D, OpenGL, C++, Multi View, Login System, Multi World Maze, Shooting, AI for enemies</p>
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
