% About section improved - Fade out over skills image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="intro-text">
                         <span class="name">Francisco Amado</span>
                         <hr class="star-light">
-                        <span class="skills">NSLog(@"Student and Developer");</span>
+                        <span class="skills">NSLog(@"Student and  Developer");</span>
                     </div>
                 </div>
             </div>
@@ -113,15 +113,16 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Francisco Amado and welcome. I'm an iOS Developer (previously at <a href="http://africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>)
-                         and a Grad Student in Computer Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a> (Instituto Superior de Engenharia do Porto). I've lived at
-                         <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I like doing normal human things
-                         such as hanging out, go for walks and read fiction/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball,
+                    <p>My name is Francisco Amado and welcome. I'm an young iOS Developer (previously worked at<a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank"> Jovago </a>
+                        in<a href="http://africainternetgroup.com/tech-center" target="_blank"> Porto Tech Center </a>) and currently finishing my Graduation in Software Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a>.</p>
+                         <p>I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I also like doing normal human things
+                         such as hanging out, go for walks and read fictional/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball,
                          Bodyboarding and browse Reddit.</p>
 				</div>
                 <div class="col-lg-4">
-                    <p>I've discovered programming late in my teens through Arduino, and since then I've been trying to assimilate all the information I can get and all the amazing things I learn everyday.
-                        I like software development and mobile.</p>
+                    <p>I've discovered programming late in my teens through Arduino, and since then I've tryied to assimilate all the information I can and learn.
+                    </p>
+                    <p>I like software development and mobile, specially iOS. You should check out some of the <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">Work</a> I've done.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 						<a href="img/portfolio/CV_Francisco_Amado.pdf" download class="btn btn-lg btn-outline" >
@@ -231,17 +232,8 @@
                             <img src="img/portfolio/book.png" class="img-responsive img-centered" alt="">
                             <p>As I level up in life, my skillbook gets better and more vast. These are some of the skills I got through quests:</p>
 							<div class="col-lg-12">
-								<img src="img/skills.svg" class="" style="opacity:0.0;" onmouseover="imgIN(this)" onmouseout="imgOUT(this)">
+								<img src="img/skills.svg">
 							</div>
-							<script>
-							   function imgIN(x){
-								  $(x).fadeTo(2000, 1);
-							   }
-
-							   function imgOUT(y){
-								  $(y).fadeTo('slow', 0.4);
-							   }
-							</script>
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
 						</div>
 					</div>
