--- a/index.html
+++ b/index.html
@@ -111,14 +111,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>My name is Francisco Amado and welcome. I'm an young iOS Developer (previously worked at<a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank"> Jovago </a>
-                        in<a href="http://africainternetgroup.com/tech-center" target="_blank"> Porto Tech Center </a>) and currently finishing my Graduation in Software Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a>.</p>
+                    <p>My name is Francisco Amado and welcome. I'm an young iOS Developer and currently finishing my Graduation in Software Engineering at <a href="https://www.isep.ipp.pt/" target="_blank">ISEP</a>.</p>
                          <p>I've lived at <a href="http://lmgtfy.com/?q=Le%C3%A7a+da+Palmeira" targert="_blank">Leça da Palmeira</a> for almost my entire presence in this planet. I also like doing normal human things
                          such as hanging out, go for walks and read fictional/fantasy books, articles, blogs, posts, news, almost every time related to technology and/or programming. I also like playing Basketball,
                          Bodyboarding and browse Reddit.</p>
 				</div>
                 <div class="col-lg-4">
-                    <p>I've discovered programming late in my teens through Arduino, and since then I've tryied to assimilate all the information I can and learn.
+                    <p>I've discovered programming through Arduino, and since then I've tryied to assimilate all the information I can and learn.
                     </p>
                     <p>I like software development and mobile, specially iOS. You should check out some of the <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">Work</a> I've done.</p>
 				</div>
@@ -136,7 +135,7 @@
         <div class="container hidden-xs">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Wanning Gibbous</h2>
+                    <h2>Path</h2>
                     <hr class="star-light">
                     <p>Here is what, when and where I've worked</p>
                 </div>
@@ -147,10 +146,11 @@
                 <div class="col-lg-12 text-center">
                     <!-- <section class="time" id="timesheet"></section> -->
                     <script type="text/javascript">
-                            new Timesheet('timesheet', 2014, 2016, [
+                            new Timesheet('timesheet', 2014, 2017, [
                                 ['01/2014', '06/2015', 'Freelancer, Own projects, mostly related to College', 'dolor'],
                                 ['06/2015', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem'],
-                                ['09/2015', '03/2016', 'iOS Developer for <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank">Jovago</a> @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>', 'ipsum']]);
+                                ['09/2015', '03/2016', 'iOS Developer for <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank">Jovago</a> @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>', 'ipsum'],
+                                ['06/2016', '2016', 'iOS Consultant @ <a href="http://www.altran.pt/" target="_blank">Altran Portugal</a>', 'lorem']]);
                     </script>
                 </div>
             </div>
@@ -256,7 +256,7 @@
 							<h2>Projects</h2>
 							<hr class="star-primary">
 							<img src="img/portfolio/box.png" class="img-responsive img-centered" alt="">
-							<p>My work here exhibited, most recent first(more on my <a href="https://github.com/FranciscoAmado">Github page</a>):</p>
+							<p>My work here exhibited, most recent first (more on my <a href="https://github.com/FranciscoAmado">Github page</a>):</p>
 							<div>
                                 <div class="row">
                                     <hr class="nostar-primary">
