--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#skills" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -87,7 +87,7 @@
                     </a>
                 </div>
 				<div class="col-sm-12 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#projects" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -119,7 +119,7 @@
                 <div class="col-lg-4">
                     <p>I've discovered programming through Arduino, and since then I've tryied to assimilate all the information I can and learn.
                     </p>
-                    <p>I like software development and mobile, specially iOS. You should check out some of the <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">Work</a> I've done.</p>
+                    <p>I like software development and mobile, specially iOS. You should check out some of the <a href="#projects" class="portfolio-link" data-toggle="modal">Work</a> I've done.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 						<a href="img/portfolio/CV_Francisco_Amado.pdf" download class="btn btn-lg btn-outline" >
@@ -148,9 +148,9 @@
                     <script type="text/javascript">
                             new Timesheet('timesheet', 2014, 2017, [
                                 ['01/2014', '06/2015', 'Freelancer, Own projects, mostly related to College', 'dolor'],
-                                ['06/2015', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a> - Summer Intern', 'lorem'],
-                                ['09/2015', '03/2016', 'iOS Developer for <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank">Jovago</a> @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank">Porto Tech Center</a>', 'ipsum'],
-                                ['06/2016', '2016', 'iOS Consultant @ <a href="http://www.altran.pt/" target="_blank">Altran Portugal</a>', 'lorem']]);
+                                ['06/2015', '09/2015', 'iOS Developer @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank"><span class="badge badge-error">Porto Tech Center</span></a> - Summer Intern', 'lorem'],
+                                ['09/2015', '03/2016', 'iOS Developer for <a href="https://itunes.apple.com/pt/app/jovago/id1083023761?l=en&mt=8" target="_blank"><span class="badge badge-info">Jovago</span></a> @ <a href="http://www.africainternetgroup.com/tech-center" target="_blank"><span class="badge badge-error">Porto Tech Center</span></a>', 'ipsum'],
+                                ['06/2016', '2016', 'iOS Developer @ <a href="http://pixelmatters.com/" target="_blank"><span class="badge badge-warning">Pixelmatters</span></a>', 'dolor']]);
                     </script>
                 </div>
             </div>
@@ -215,7 +215,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="skills" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -241,7 +241,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="projects" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -267,14 +267,36 @@
                                         <img src="img/portfolio/appstorebadge.svg" class="img-responsive img-centered" alt="">
 
                                     </a>
-                                    <p><h4>Keywords:</h4> Bookings, Objective-C, RestKit, CoreData, Localisation, GoogleMaps, Google Analytics, Jenkins</p>
+                                    <div>
+                                        <span class="label label-default">Bookings</span>
+                                        <span class="label label-default">Xcode 7</span>
+                                        <span class="label label-default">Objective-C</span>
+                                        <span class="label label-danger">Cocoapods</span>
+                                        <span class="label label-primary">RestKit</span>
+                                        <span class="label label-primary">CoreData</span>
+                                        <span class="label label-primary">Localisation</span>
+                                        <span class="label label-primary">GoogleMaps</span>
+                                        <span class="label label-primary">Google Analytics</span>
+                                        <span class="label label-info">Jenkins</span>
+                                    </div>
                                 </div>
 								<div class="row">
 									<hr class="nostar-primary">
 									<h3>Biztrend</h3>
 									<h4>iOS Data Visualization app for Porto Tech Center Mobile Summer Academy</h4>
                                     <img src="img/portfolio/iOS-Detail-frame.png" width="245" height="480" class="img-responsive img-centered" alt="">
-                                    <p><h4>Keywords:</h4> Charts, KPI's, Objective-C, API Communication, CoreData, Localisation, GoogleSignin, Local Notifications, Background Fetch</p>
+                                    <div>
+                                        <span class="label label-default">Charts</span>
+                                        <span class="label label-default">KPI's</span>
+                                        <span class="label label-default">Xcode 7</span>
+                                        <span class="label label-default">Objective-C</span>
+                                        <span class="label label-primary">REST API Communication</span>
+                                        <span class="label label-primary">CoreData</span>
+                                        <span class="label label-primary">Localisation</span>
+                                        <span class="label label-primary">GoogleSignin</span>
+                                        <span class="label label-primary">Local Notifications</span>
+                                        <span class="label label-primary">Background Fetch</span>
+                                    </div>
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
@@ -283,7 +305,13 @@
 									<a href="https://github.com/FranciscoAmado/Timer24">
 										<img src="img/portfolio/timer24-ss.png" width="245" height="480" class="img-responsive img-centered" alt="">
 									</a>
-                                    <p><h4>Keywords:</h4> Timer, Time Restrictions, Custom Keyboard</p>
+                                    <div>
+                                        <span class="label label-default">Timer</span>
+                                        <span class="label label-default">Time Restrictions</span>
+                                        <span class="label label-default">Android Studio</span>
+                                        <span class="label label-default">Java</span>
+                                        <span class="label label-primary">Custom Keyboard</span>
+                                    </div>
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
@@ -292,11 +320,30 @@
 									<br>
 									<h4> Website</h4>
 									<img src="img/portfolio/BPwebsite.bmp" width="580" height="320" class="img-responsive img-centered" alt="">
-                                    <p><h5>Keywords:</h5> .NET, Localisation, Login System, Downloads, Storing game data, Custom WebService</p>
+                                    <div>
+                                        <span class="label label-default">ASP .NET</span>
+                                        <span class="label label-default">Visual Studio</span>
+                                        <span class="label label-default">C#</span>
+                                        <span class="label label-default">XHTML</span>
+                                        <span class="label label-primary">Localisation</span>
+                                        <span class="label label-primary">Login System</span>
+                                        <span class="label label-primary">Downloads</span>
+                                        <span class="label label-primary">Storing Game Data</span>
+                                        <span class="label label-primary">Custom WebServices</span>
+                                    </div>
 									<br>
 									<h4>Homer Game</h4>
 									<img src="img/portfolio/HomerGame.bmp" width="580" height="580" class="img-responsive img-centered" alt="">
-                                    <p><h5>Keywords:</h5> 3D, OpenGL, C++, Multi View, Login System, Multi World Maze, Shooting, AI for enemies</p>
+                                    <div>
+                                        <span class="label label-default">OpenGL</span>
+                                        <span class="label label-default">3D</span>
+                                        <span class="label label-default">Visual Studio</span>
+                                        <span class="label label-default">C++</span>
+                                        <span class="label label-primary">Multi View</span>
+                                        <span class="label label-primary">Login System</span>
+                                        <span class="label label-primary">Multi World Maze</span>
+                                        <span class="label label-primary">AI for enemies</span>
+                                    </div>
 								</div>
 								<div class="row">
 									<hr class="nostar-primary">
