Added Open Graph Object tags

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <meta name="description" content="Personal page">
     <meta name="author" content="Francisco Amado">
 
+    <meta property="og:url" content="http://franciscoamado.github.io/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Francisco Amado"/>
+    <meta property="og:description" content="Get to know me!"/>
+    <meta property="og:image" content="http://franciscoamado.github.io/img/me.png"/>
+
     <title>Francisco Amado -  Get to know me</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
