fixed image file type -.-

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Francisco Amado"/>
     <meta property="og:description" content="Get to know me!"/>
-    <meta property="og:image" content="http://franciscoamado.github.io/img/me.png"/>
+    <meta property="og:image" content="http://franciscoamado.github.io/img/me.jpg"/>
 
     <title>Francisco Amado -  Get to know me</title>
 
