--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
     </div>
 
     <div class="container">
-        <div style="text-align: center">
-            Hosted in <a href="https://pages.github.com/" target="_blank">github pages</a>, powered with
-            <a href="http://getskeleton.com/" target="_blank">Skeleton CSS</a> - Copyright &copy; Francisco Amado 2017
+        <div class="footer">
+            Hosted in <strong><a href="https://pages.github.com/" target="_blank"><tag style="background: #323232">Github Pages</tag></a></strong> - Copyright &copy; Francisco Amado 2017
         </div>
     </div>
     
