fixed some external links; added favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- If something isn't upright yet, I'm still developing this... -->
-    <!-- Basic Page Needs
+    <!-- Metadata
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
     <title>Francisco Amado</title>
@@ -14,6 +14,7 @@
     <meta property="og:title" content="Francisco Amado"/>
     <meta property="og:description" content="Get to know me!"/>
     <meta property="og:image" content="http://franciscoamado.github.io/img/me.jpg"/>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -51,11 +52,11 @@
             <div style="justify-content: true">
                 <div class="four columns">
                     <div class="skill">Finta ⚽️</div>
-                    <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I have the chance to be part of <strong><a href="http://getfinta.com/" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, a social app for soccer fans.
+                    <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I have the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, a social app for soccer fans.
                 </div>
                 <div class="four columns">
                     <div class="skill">Jovago ✈️</div>
-                    <p class="clean">Through my time there, I've got the luck to build <strong><a href="https://itunes.apple.com/pt/app/jovago/id1083023761" target="_blank"><tag style="background: #2A72E8">Jovago</tag></a></strong>'s iOS Booking App, from blank to the App Store Release.
+                    <p class="clean">Through my time there, I've got the luck to build <strong><a href="https://itun.es/i67L3Hr" target="_blank"><tag style="background: #2A72E8">Jovago</tag></a></strong>'s iOS Booking App, from blank to the App Store Release.
                 </div>
                 <div class="four columns">
                     <div class="skill">Leaf 🍃</div>
@@ -105,9 +106,7 @@
         </div>
 
         <div class="row">
-            <div class="footer">
-                Hosted in <strong><a href="https://pages.github.com/" target="_blank"><tag style="background: #323232">Github Pages</tag></a></strong> - Copyright &copy; Francisco Amado 2017
-            </div>
+            <div class="footer">Copyright &copy; Francisco Amado 2017</div>
         </div>
     </div>
     
