Added resume files; Minor adjustments

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div style="justify-content: true">
                 <div class="four columns">
                     <div class="skill">Finta ⚽️</div>
-                    <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I have the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, a social app for soccer fans.
+                    <p class="clean">At <span style="color: #FF695C"><strong>Pixelmatters</strong></span>, I have the chance to be part of <strong><a href="https://appsto.re/pt/GEiO9.i" target="_blank"><tag style="background: #00E582">Finta</tag></a></strong>, an app where Social meets Football.
                 </div>
                 <div class="four columns">
                     <div class="skill">Jovago ✈️</div>
@@ -103,6 +103,8 @@
             <a href="https://twitter.com/FranciscoSAmado" target="_blank" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
 
             <a href="https://www.linkedin.com/in/franciscoamado" target="_blank" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
+
+            <strong><a href="resume.html" target="_blank"><tag style="background: #222"> Résumé</tag></a></strong>
         </div>
 
         <div class="row">
