--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
       <h2>iOS Developer</h2>
 
       <blockquote>
-        <!--<p><a href="resume.pdf">Download PDF</a><br />-->
+        <p><a href="resume.pdf">Download PDF</a><br />
         <a href="mailto:franciscoamado@live.com.pt">franciscoamado@live.com.pt</a><br />
         <a href="http://franciscoamado.github.io/">franciscoamado.github.io</a></p>
       </blockquote>
@@ -106,6 +106,11 @@
       <h3 id="conferences">Conferences</h3>
 
       <dl>
+        <dt>SwiftAveiro</dt>
+        <dd><em>Attendee</em>
+        <strong>Jun 2017</strong>
+        2nd Edition of SwiftAveiro, with a different format. 2 full days of intense workshops around functional reactive programming, debugging, architecture and many others themes, with noticeable speakers such as Jorge Ortiz, Benjamin Encz, Orta Therox, Ellen Shapiro, etc.</dd>
+
         <dt>dotSwift</dt>
         <dd><em>Attendee</em>
         <strong>Jan 2017</strong>
